--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div class="company-box">
                             <img src="img/linkedinlogo.png" alt="logo linkedin">
                             <div class="company-info">
-                                <h3>Desenvolvedor Fornt End</h3>
+                                <h3>Desenvolvedor Front End</h3>
                                 <p>Linkedin</p>
                             </div>
                         </div>
