--- a/job.html
+++ b/job.html
@@ -25,7 +25,7 @@
 			</nav>
 		</header>
 		<div id="job-header">
-			<h1>Developer</h1>
+			<h1>Desenvolvedor Full Stack</h1>
 			<div id="job-info">
 				<div class="job-type">
 				  <span class="homeoffice">home office</span>
@@ -105,7 +105,7 @@
 				<div class="footer-box">
 					<div class="company-footer">
 						<img src="img/logo.png">
-						<h2>JobFinder</h2>
+						<h2>Serviços MAB</h2>
 						<p>A maneira mais fácil de encontrar seu próximo emprego.</p>
 					</div>
 				</div>
@@ -136,15 +136,11 @@
 			</div>
 			<div class="footer-bottom">
 				<div class="wrapper">
-					<p>horaDeCodar - 2019</p>
+					<p>Willy Ribeiro, Ilton Barros e João Paulo - 2024</p>
 				</div>
 			</div>
 		</footer>
 	</div>
 </body>
-<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 </html>
